--- a/ShareMyTaxi/src/pages/home/home.scss
+++ b/ShareMyTaxi/src/pages/home/home.scss
@@ -1,3 +1,15 @@
 page-home {
 
+    #homeInputContainer{
+        position: fixed;
+        width: 70%;
+        margin-left:15%;
+        margin-top:20px;  
+    }
+
+   #map {
+        width: 100%;
+        height: 100%;
+        z-index: -100;
+      }
 }
