Share View and drive views added fire base connected

--- a/ShareMyTaxi/src/theme/variables.scss
+++ b/ShareMyTaxi/src/theme/variables.scss
@@ -29,7 +29,9 @@ $colors: (
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
-  AppColor:   #3498db
+  //AppColor:   #3498db
+  AppColor: rgba(44, 62, 80,1),
+  AppLiteColor:rgba(103, 128, 159,1)
 );
 
 
