--- a/ShareMyTaxi/src/pages/share-home/share-home.scss
+++ b/ShareMyTaxi/src/pages/share-home/share-home.scss
@@ -1,8 +1,11 @@
 page-share-home {
   #map {
-    position:absolute;
-    width: 100%;
-    height: 100%;
-    z-index: -100;
+    position: relative;
+    height:200px;
+  }
+  .container{
+    height: 200px;
+    z-index: 100;
+    background-color: rgba(0,0,0,0.5);
   }
 }
