remove angular fire and added firebase connections

--- a/ShareMyTaxi/src/theme/variables.scss
+++ b/ShareMyTaxi/src/theme/variables.scss
@@ -31,7 +31,8 @@ $colors: (
   dark:       #222,
   //AppColor:   #3498db
   AppColor: rgba(44, 62, 80,1),
-  AppLiteColor:rgba(103, 128, 159,1)
+  AppLiteColor:rgba(103, 128, 159,1),
+  navColour:rgba(0,0,0,0)
 );
 
 
