Build clean || Profile view Done and some minor changers in providers

--- a/ShareMyTaxi/src/pages/profile-home/profile-home.scss
+++ b/ShareMyTaxi/src/pages/profile-home/profile-home.scss
@@ -3,6 +3,12 @@ page-profile-home {
     ion-content{
         padding: 0px;
     }
+    .profile-header{
+        text-align: center;
+    }
+    .profile-header-img{
+        width: 100%;
+    }
 
     .profile-container{
         width: 100%;
