--- a/ShareMyTaxi/src/pages/share-home/share-home.scss
+++ b/ShareMyTaxi/src/pages/share-home/share-home.scss
@@ -1,10 +1,10 @@
 page-share-home {
   #map {
     position: relative;
-    height:200px;
+    height:50%;
   }
   .container{
-    height: 200px;
+    height:50%;
     z-index: 100;
     background-color: rgba(0,0,0,0.5);
   }
